deployment/platforms/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: doable
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 4000
      targetPort: 4000
