deployment/platforms/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: doable
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
