deployment/platforms/k8s/base/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws
  namespace: doable
spec:
  type: ClusterIP
  selector:
    app: ws
  ports:
    - name: ws
      port: 4001
      targetPort: 4001
